English Lead ChangeLog

***** ChangeLog for 1.7 compared to 1.6 *****
FIX : Fix problem with Dolibarr 3.8

***** ChangeLog for 1.5.1 compared to 1.5 *****
NEW : Italian language

***** ChangeLog for 1.5 compared to 1.3 *****
FIX : Problem on extrafields creation
NEW : Merge from GPC solution repository code review

***** ChangeLog for 1.3 compared to 1.2 *****
FIX : problem on tab File attached

***** ChangeLog for 1.2 compared to 1.1 *****
NEW : Can link to lead directly from proposal/order/invoice/contract
NEW : close lead (status lost) will update all proposal to status not signed
NEW : Some graph and data
NEW : New tabs notes and attached documents
NEW : Add list lead into cutomer tabs (thridparty module)
NEW : Add lead export into export module