@@ -1,5 +1,9 @@
 English Lead ChangeLog
 
+***** ChangeLog for 1.8 compared to 1.7 *****
+NEW : Add setting to disabeld thirdparty mandatory field
+FIX : Shouldn't propose disabled users #13 
+
 ***** ChangeLog for 1.7 compared to 1.6 *****
 FIX : Fix problem with Dolibarr 3.8
 
